force-app/main/default/objects/Competitive_Product__c/Competitive_Product__c.object-meta.xml
<CustomObject>
    <label>Competitive Product</label>
    <nameField>
        <label>Competitive Product model</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitive Product</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>