force-app/main/default/objects/Competitive_Product__c/fields/Back_Shell_Design__c.field-meta.xml
<CustomField>
    <fullName>Back_Shell_Design__c</fullName>
    <label>Back Shell Design</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unibody</fullName>
            </value>
            <value>
                <fullName>360° design</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>