force-app/main/default/objects/Competitive_Product__c/fields/Base_Color__c.field-meta.xml
<CustomField>
    <fullName>Base_Color__c</fullName>
    <label>Base Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>