force-app/main/default/objects/Competitive_Product__c/fields/Basic_product__c.field-meta.xml
<CustomField>
    <fullName>Basic_product__c</fullName>
    <label>Basic product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>