force-app/main/default/objects/Competitive_Product__c/fields/Border_Material__c.field-meta.xml
<CustomField>
    <fullName>Border_Material__c</fullName>
    <label>Border Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>