force-app/main/default/objects/Competitive_Product__c/fields/bottom_sprag_Type_Quantity__c.field-meta.xml
<CustomField>
    <fullName>bottom_sprag_Type_Quantity__c</fullName>
    <label>Bottom sprag Type / Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>