force-app/main/default/objects/Competitive_Product__c/fields/Boundary_Dimension_D__c.field-meta.xml
<CustomField>
    <fullName>Boundary_Dimension_D__c</fullName>
    <label>Boundary Dimension D(Delete)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>