force-app/main/default/objects/Competitive_Product__c/fields/Brightness_NIT__c.field-meta.xml
<CustomField>
    <fullName>Brightness_NIT__c</fullName>
    <label>Brightness (NIT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>