force-app/main/default/objects/Competitive_Product__c/fields/Buit_iWIFI__c.field-meta.xml
<CustomField>
    <fullName>Buit_iWIFI__c</fullName>
    <label>Built-in WiFi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>