force-app/main/default/objects/Competitive_Product__c/fields/Certification_Information__c.field-meta.xml
<CustomField>
    <fullName>Certification_Information__c</fullName>
    <label>Certification Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>