force-app/main/default/objects/Competitive_Product__c/fields/Channel_2__c.field-meta.xml
<CustomField>
    <fullName>Channel_2__c</fullName>
    <label>Channel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>