force-app/main/default/objects/Competitive_Product__c/fields/Cold_Closet_Storag_Rack__c.field-meta.xml
<CustomField>
    <fullName>Cold_Closet_Storag_Rack__c</fullName>
    <label>Cold Closet Storage Rack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>