force-app/main/default/objects/Competitive_Product__c/fields/Cold_Closet_Zero_Degree_Room__c.field-meta.xml
<CustomField>
    <fullName>Cold_Closet_Zero_Degree_Room__c</fullName>
    <label>Cold Closet Zero Degree Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>