force-app/main/default/objects/Competitive_Product__c/fields/Cold_Storage_Volume__c.field-meta.xml
<CustomField>
    <fullName>Cold_Storage_Volume__c</fullName>
    <label>Cold Storage Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>