force-app/main/default/objects/Competitive_Product__c/fields/Control_board_height__c.field-meta.xml
<CustomField>
    <fullName>Control_board_height__c</fullName>
    <label>Control board height</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>