force-app/main/default/objects/Competitive_Product__c/fields/Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Type__c</fullName>
    <label>Control Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>