force-app/main/default/objects/Competitive_Product__c/fields/Display_Mode__c.field-meta.xml
<CustomField>
    <fullName>Display_Mode__c</fullName>
    <label>Display Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>