force-app/main/default/objects/Competitive_Product__c/fields/Door_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Door_Diameter__c</fullName>
    <label>Door Diameter</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>