force-app/main/default/objects/Competitive_Product__c/fields/Door_Lock__c.field-meta.xml
<CustomField>
    <fullName>Door_Lock__c</fullName>
    <label>Door Lock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>