force-app/main/default/objects/Competitive_Product__c/fields/Door_Lock_Type__c.field-meta.xml
<CustomField>
    <fullName>Door_Lock_Type__c</fullName>
    <label>Door Lock Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>