force-app/main/default/objects/Competitive_Product__c/fields/Energy_Efficiency_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Energy_Efficiency_Ratio__c</fullName>
    <label>Energy Efficiency Ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>