force-app/main/default/objects/Competitive_Product__c/fields/Expected_IR_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_IR_Time__c</fullName>
    <label>Expected IR Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>