force-app/main/default/objects/Competitive_Product__c/fields/Export_model__c.field-meta.xml
<CustomField>
    <fullName>Export_model__c</fullName>
    <label>Factory model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>