force-app/main/default/objects/Competitive_Product__c/fields/Freezing_Chamber_Ice_Making__c.field-meta.xml
<CustomField>
    <fullName>Freezing_Chamber_Ice_Making__c</fullName>
    <label>Freezing Chamber Ice Maker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>