force-app/main/default/objects/Competitive_Product__c/fields/Freezing_Chamber_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Freezing_Chamber_Shelf__c</fullName>
    <label>Freezing Chamber Shelf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>