force-app/main/default/objects/Competitive_Product__c/fields/Freezing_Room_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Freezing_Room_Configuration__c</fullName>
    <label>Freezing Room Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>