force-app/main/default/objects/Competitive_Product__c/fields/Frequency_conversion_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Frequency_conversion_Y_N__c</fullName>
    <label>Frequency conversion Y/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>