force-app/main/default/objects/Competitive_Product__c/fields/Frozen_Volume__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Volume__c</fullName>
    <label>Frozen Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>