force-app/main/default/objects/Competitive_Product__c/fields/Hardware_Band_GSM__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Band_GSM__c</fullName>
    <label>Hardware Band GSM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>