force-app/main/default/objects/Competitive_Product__c/fields/Hardware_LCD_TP_resolution__c.field-meta.xml
<CustomField>
    <fullName>Hardware_LCD_TP_resolution__c</fullName>
    <label>Hardware LCD+TP resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>