force-app/main/default/objects/Competitive_Product__c/fields/Hardware_Memory_RAM_in_GB__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Memory_RAM_in_GB__c</fullName>
    <label>Hardware Memory RAM (in GB)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>