force-app/main/default/objects/Competitive_Product__c/fields/Hardware_sub_camera_pixel_unit_MP__c.field-meta.xml
<CustomField>
    <fullName>Hardware_sub_camera_pixel_unit_MP__c</fullName>
    <label>Hardware sub camera pixel (unit MP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>