force-app/main/default/objects/Competitive_Product__c/fields/Heating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Heating_Capacity__c</fullName>
    <label>Heating Capacity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>