force-app/main/default/objects/Competitive_Product__c/fields/Heating_Capacity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Heating_Capacity_Unit__c</fullName>
    <label>Heating Capacity Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>Btu/h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>