force-app/main/default/objects/Competitive_Product__c/fields/High_Color_Gamut__c.field-meta.xml
<CustomField>
    <fullName>High_Color_Gamut__c</fullName>
    <label>Wide Color Gamut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quamtun dot</fullName>
            </value>
            <value>
                <fullName>WCG</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>