force-app/main/default/objects/Competitive_Product__c/fields/IDU_Size__c.field-meta.xml
<CustomField>
    <fullName>IDU_Size__c</fullName>
    <label>IDU Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>