force-app/main/default/objects/Competitive_Product__c/fields/Indoor_enclosure__c.field-meta.xml
<CustomField>
    <fullName>Indoor_enclosure__c</fullName>
    <label>Indoor enclosure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>