force-app/main/default/objects/Competitive_Product__c/fields/Inner_Container_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Inner_Container_Requirements__c</fullName>
    <label>Inner Container Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>