force-app/main/default/objects/Competitive_Product__c/fields/Inner_Drum_Volume__c.field-meta.xml
<CustomField>
    <fullName>Inner_Drum_Volume__c</fullName>
    <label>Inner Drum Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>