force-app/main/default/objects/Competitive_Product__c/fields/IR_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>IR_Complete_Date__c</fullName>
    <label>IR Complete Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>