force-app/main/default/objects/Competitive_Product__c/fields/Knocker_Color__c.field-meta.xml
<CustomField>
    <fullName>Knocker_Color__c</fullName>
    <label>Knocker Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>