force-app/main/default/objects/Competitive_Product__c/fields/Knocker_Type__c.field-meta.xml
<CustomField>
    <fullName>Knocker_Type__c</fullName>
    <label>Knocker Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>