force-app/main/default/objects/Competitive_Product__c/fields/Loading_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Loading_Capacity__c</fullName>
    <label>Loading Capacity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>