force-app/main/default/objects/Competitive_Product__c/fields/Loading_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Loading_Pickup__c</fullName>
    <label>Loading Pickup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>