force-app/main/default/objects/Competitive_Product__c/fields/Local_Dimming_Back_Light_Control__c.field-meta.xml
<CustomField>
    <fullName>Local_Dimming_Back_Light_Control__c</fullName>
    <label>Local Dimming / Back Light Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>