force-app/main/default/objects/Competitive_Product__c/fields/Motor_type__c.field-meta.xml
<CustomField>
    <fullName>Motor_type__c</fullName>
    <label>Motor type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>