force-app/main/default/objects/Competitive_Product__c/fields/Movement_Model__c.field-meta.xml
<CustomField>
    <fullName>Movement_Model__c</fullName>
    <label>Movement Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>