force-app/main/default/objects/Competitive_Product__c/fields/Net_volume__c.field-meta.xml
<CustomField>
    <fullName>Net_volume__c</fullName>
    <label>Net volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>