force-app/main/default/objects/Competitive_Product__c/fields/Noise__c.field-meta.xml
<CustomField>
    <fullName>Noise__c</fullName>
    <label>Noise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>