force-app/main/default/objects/Competitive_Product__c/fields/Number_of_Basket__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Basket__c</fullName>
    <label>Number of Basket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>