force-app/main/default/objects/Competitive_Product__c/fields/ODU_Size__c.field-meta.xml
<CustomField>
    <fullName>ODU_Size__c</fullName>
    <label>ODU Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>