force-app/main/default/objects/Competitive_Product__c/fields/Operating_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Operating_Voltage__c</fullName>
    <label>Operating Voltage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>