force-app/main/default/objects/Competitive_Product__c/fields/Outdoor_enclosure__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_enclosure__c</fullName>
    <label>Outdoor enclosure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>