force-app/main/default/objects/Competitive_Product__c/fields/Outdoor_unit_production_model__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_unit_production_model__c</fullName>
    <label>Outdoor unit production model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>