force-app/main/default/objects/Competitive_Product__c/fields/Package_size_W_D_H_mm__c.field-meta.xml
<CustomField>
    <fullName>Package_size_W_D_H_mm__c</fullName>
    <label>Package size (W*D*H mm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>