force-app/main/default/objects/Competitive_Product__c/fields/Packaging_material_box_type__c.field-meta.xml
<CustomField>
    <fullName>Packaging_material_box_type__c</fullName>
    <label>Packaging material box type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>