force-app/main/default/objects/Competitive_Product__c/fields/Panel_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Panel_Manufacturer__c</fullName>
    <label>Panel Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>