force-app/main/default/objects/Competitive_Product__c/fields/Panel_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Panel_Pattern__c</fullName>
    <label>Panel Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>