force-app/main/default/objects/Competitive_Product__c/fields/Plane_Surface__c.field-meta.xml
<CustomField>
    <fullName>Plane_Surface__c</fullName>
    <label>Plane/Surface</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FLAT</fullName>
            </value>
            <value>
                <fullName>CURVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>