force-app/main/default/objects/Competitive_Product__c/fields/Price_2__c.field-meta.xml
<CustomField>
    <fullName>Price_2__c</fullName>
    <label>Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>