force-app/main/default/objects/Competitive_Product__c/fields/Product_category_temperature_control_mo__c.field-meta.xml
<CustomField>
    <fullName>Product_category_temperature_control_mo__c</fullName>
    <label>Product category (temperature control mo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>