force-app/main/default/objects/Competitive_Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <label>Product Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>