force-app/main/default/objects/Competitive_Product__c/fields/Product_level_door_number_of_doors__c.field-meta.xml
<CustomField>
    <fullName>Product_level_door_number_of_doors__c</fullName>
    <label>Product level (door) - number of doors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>