force-app/main/default/objects/Competitive_Product__c/fields/Product_level_temperature_control_mode__c.field-meta.xml
<CustomField>
    <fullName>Product_level_temperature_control_mode__c</fullName>
    <label>Product level (temperature control mode)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>