force-app/main/default/objects/Competitive_Product__c/fields/Product_Positioning__c.field-meta.xml
<CustomField>
    <fullName>Product_Positioning__c</fullName>
    <label>Product Positioning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>