force-app/main/default/objects/Competitive_Product__c/fields/Quantum_Dots_Quantum_Dot__c.field-meta.xml
<CustomField>
    <fullName>Quantum_Dots_Quantum_Dot__c</fullName>
    <label>Quantum Dots / Quantum Dot</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>