force-app/main/default/objects/Competitive_Product__c/fields/Refresh_rate_HZ_rating_Type_rating__c.field-meta.xml
<CustomField>
    <fullName>Refresh_rate_HZ_rating_Type_rating__c</fullName>
    <label>Refresh rate/HZ rating-Type and rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>60HZ</fullName>
            </value>
            <value>
                <fullName>120HZ</fullName>
            </value>
            <value>
                <fullName>240Hz</fullName>
            </value>
            <value>
                <fullName>50HZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>