force-app/main/default/objects/Competitive_Product__c/fields/Refrigerating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Capacity__c</fullName>
    <label>Refrigerating Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>