force-app/main/default/objects/Competitive_Product__c/fields/Refrigerating_Fluid__c.field-meta.xml
<CustomField>
    <fullName>Refrigerating_Fluid__c</fullName>
    <label>Refrigerating Fluid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>