force-app/main/default/objects/Competitive_Product__c/fields/Remote_control_model__c.field-meta.xml
<CustomField>
    <fullName>Remote_control_model__c</fullName>
    <label>Remote control model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>