force-app/main/default/objects/Competitive_Product__c/fields/Rotate_Speed_RPM__c.field-meta.xml
<CustomField>
    <fullName>Rotate_Speed_RPM__c</fullName>
    <label>Rotational Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>