force-app/main/default/objects/Competitive_Product__c/fields/Sale_Currency_1__c.field-meta.xml
<CustomField>
    <fullName>Sale_Currency_1__c</fullName>
    <label>Sale Currency 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>