force-app/main/default/objects/Competitive_Product__c/fields/Target_EXW__c.field-meta.xml
<CustomField>
    <fullName>Target_EXW__c</fullName>
    <label>Target EXW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>