force-app/main/default/objects/Competitive_Product__c/fields/TTM__c.field-meta.xml
<CustomField>
    <fullName>TTM__c</fullName>
    <label>TTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>