force-app/main/default/objects/Competitive_Product__c/fields/TV_Type2__c.field-meta.xml
<CustomField>
    <fullName>TV_Type2__c</fullName>
    <label>TV Type2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>