force-app/main/default/objects/Competitive_Product__c/fields/Vendor_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Brand__c</fullName>
    <label>Vendor Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>