force-app/main/default/objects/Competitive_Product__c/fields/Voltage_frequency__c.field-meta.xml
<CustomField>
    <fullName>Voltage_frequency__c</fullName>
    <label>Voltage frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>