force-app/main/default/objects/Competitive_Product__c/fields/Water_Consumption_Level__c.field-meta.xml
<CustomField>
    <fullName>Water_Consumption_Level__c</fullName>
    <label>Water Consumption Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>