force-app/main/default/objects/Competitive_Product__c/fields/Water_Inlet__c.field-meta.xml
<CustomField>
    <fullName>Water_Inlet__c</fullName>
    <label>Water Inlet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>