force-app/main/default/objects/Competitive_Product__c/fields/WM_Type__c.field-meta.xml
<CustomField>
    <fullName>WM_Type__c</fullName>
    <label>WM Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>