force-app/main/default/objects/Competitive_Product__c/recordTypes/AC_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>AC_Competitive_Product_RecordType</fullName>
    <active>true</active>
    <label>AC Competitive Product RecordType</label>
</RecordType>