force-app/main/default/objects/Competitive_Product__c/recordTypes/Mobile_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Mobile_Competitive_Product_RecordType</fullName>
    <active>true</active>
    <label>Mobile Competitive Product RecordType</label>
</RecordType>