force-app/main/default/objects/Competitive_Product__c/recordTypes/TV_Competitive_Product_RecordType.recordType-meta.xml
<RecordType>
    <fullName>TV_Competitive_Product_RecordType</fullName>
    <active>true</active>
    <label>TV Competitive Product RecordType</label>
</RecordType>