force-app/main/default/objects/Competitive_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X3D_Type_Active_or_Passive__c</columns>
    <columns>AC_Type__c</columns>
    <columns>Actual_EXW__c</columns>
    <columns>Appearance__c</columns>
    <columns>Application_number__c</columns>
    <columns>Back_Shell_Color__c</columns>
    <columns>Back_Shell_Design__c</columns>
    <columns>Base_Color__c</columns>
    <columns>Base_Form__c</columns>
    <columns>Basic_product__c</columns>
    <columns>Bluetooth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>